--- a/api/set_of_tasks.json
+++ b/api/set_of_tasks.json
@@ -2,503 +2,103 @@
   "tasks": [
     {
       "id": 1,
-      "source": "PU0",
-      "destination": "DO2"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 2,
-      "source": "PU14",
-      "destination": "DO13"
+      "pickup": "PU1",
+      "dropoff": "DO0"
     },
     {
       "id": 3,
-      "source": "PU10",
-      "destination": "DO5"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 4,
-      "source": "PU8",
-      "destination": "DO15"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 5,
-      "source": "PU3",
-      "destination": "DO6"
+      "pickup": "PU0",
+      "dropoff": "DO0"
     },
     {
       "id": 6,
-      "source": "PU9",
-      "destination": "DO3"
+      "pickup": "PU0",
+      "dropoff": "DO1"
     },
     {
       "id": 7,
-      "source": "PU4",
-      "destination": "DO9"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 8,
-      "source": "PU7",
-      "destination": "DO11"
+      "pickup": "PU1",
+      "dropoff": "DO0"
     },
     {
       "id": 9,
-      "source": "PU5",
-      "destination": "DO7"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 10,
-      "source": "PU9",
-      "destination": "DO4"
+      "pickup": "PU0",
+      "dropoff": "DO1"
     },
     {
       "id": 11,
-      "source": "PU3",
-      "destination": "DO3"
+      "pickup": "PU1",
+      "dropoff": "DO0"
     },
     {
       "id": 12,
-      "source": "PU7",
-      "destination": "DO1"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 13,
-      "source": "PU4",
-      "destination": "DO11"
+      "pickup": "PU0",
+      "dropoff": "DO0"
     },
     {
       "id": 14,
-      "source": "PU9",
-      "destination": "DO3"
+      "pickup": "PU1",
+      "dropoff": "DO0"
     },
     {
       "id": 15,
-      "source": "PU3",
-      "destination": "DO10"
+      "pickup": "PU0",
+      "dropoff": "DO1"
     },
     {
       "id": 16,
-      "source": "PU6",
-      "destination": "DO4"
+      "pickup": "PU0",
+      "dropoff": "DO0"
     },
     {
       "id": 17,
-      "source": "PU9",
-      "destination": "DO13"
+      "pickup": "PU0",
+      "dropoff": "DO1"
     },
     {
       "id": 18,
-      "source": "PU9",
-      "destination": "DO7"
+      "pickup": "PU1",
+      "dropoff": "DO1"
     },
     {
       "id": 19,
-      "source": "PU13",
-      "destination": "DO9"
+      "pickup": "PU0",
+      "dropoff": "DO1"
     },
     {
       "id": 20,
-      "source": "PU0",
-      "destination": "DO12"
-    },
-    {
-      "id": 21,
-      "source": "PU8",
-      "destination": "DO0"
-    },
-    {
-      "id": 22,
-      "source": "PU8",
-      "destination": "DO8"
-    },
-    {
-      "id": 23,
-      "source": "PU13",
-      "destination": "DO3"
-    },
-    {
-      "id": 24,
-      "source": "PU11",
-      "destination": "DO7"
-    },
-    {
-      "id": 25,
-      "source": "PU13",
-      "destination": "DO8"
-    },
-    {
-      "id": 26,
-      "source": "PU11",
-      "destination": "DO8"
-    },
-    {
-      "id": 27,
-      "source": "PU0",
-      "destination": "DO14"
-    },
-    {
-      "id": 28,
-      "source": "PU1",
-      "destination": "DO3"
-    },
-    {
-      "id": 29,
-      "source": "PU7",
-      "destination": "DO2"
-    },
-    {
-      "id": 30,
-      "source": "PU8",
-      "destination": "DO2"
-    },
-    {
-      "id": 31,
-      "source": "PU2",
-      "destination": "DO3"
-    },
-    {
-      "id": 32,
-      "source": "PU1",
-      "destination": "DO5"
-    },
-    {
-      "id": 33,
-      "source": "PU13",
-      "destination": "DO14"
-    },
-    {
-      "id": 34,
-      "source": "PU5",
-      "destination": "DO2"
-    },
-    {
-      "id": 35,
-      "source": "PU10",
-      "destination": "DO8"
-    },
-    {
-      "id": 36,
-      "source": "PU15",
-      "destination": "DO3"
-    },
-    {
-      "id": 37,
-      "source": "PU9",
-      "destination": "DO9"
-    },
-    {
-      "id": 38,
-      "source": "PU0",
-      "destination": "DO6"
-    },
-    {
-      "id": 39,
-      "source": "PU10",
-      "destination": "DO10"
-    },
-    {
-      "id": 40,
-      "source": "PU4",
-      "destination": "DO11"
-    },
-    {
-      "id": 41,
-      "source": "PU12",
-      "destination": "DO0"
-    },
-    {
-      "id": 42,
-      "source": "PU2",
-      "destination": "DO3"
-    },
-    {
-      "id": 43,
-      "source": "PU10",
-      "destination": "DO8"
-    },
-    {
-      "id": 44,
-      "source": "PU0",
-      "destination": "DO10"
-    },
-    {
-      "id": 45,
-      "source": "PU1",
-      "destination": "DO13"
-    },
-    {
-      "id": 46,
-      "source": "PU15",
-      "destination": "DO13"
-    },
-    {
-      "id": 47,
-      "source": "PU7",
-      "destination": "DO14"
-    },
-    {
-      "id": 48,
-      "source": "PU0",
-      "destination": "DO3"
-    },
-    {
-      "id": 49,
-      "source": "PU12",
-      "destination": "DO11"
-    },
-    {
-      "id": 50,
-      "source": "PU11",
-      "destination": "DO1"
-    },
-    {
-      "id": 51,
-      "source": "PU6",
-      "destination": "DO15"
-    },
-    {
-      "id": 52,
-      "source": "PU14",
-      "destination": "DO14"
-    },
-    {
-      "id": 53,
-      "source": "PU14",
-      "destination": "DO5"
-    },
-    {
-      "id": 54,
-      "source": "PU5",
-      "destination": "DO13"
-    },
-    {
-      "id": 55,
-      "source": "PU7",
-      "destination": "DO0"
-    },
-    {
-      "id": 56,
-      "source": "PU7",
-      "destination": "DO14"
-    },
-    {
-      "id": 57,
-      "source": "PU1",
-      "destination": "DO8"
-    },
-    {
-      "id": 58,
-      "source": "PU2",
-      "destination": "DO11"
-    },
-    {
-      "id": 59,
-      "source": "PU13",
-      "destination": "DO7"
-    },
-    {
-      "id": 60,
-      "source": "PU9",
-      "destination": "DO15"
-    },
-    {
-      "id": 61,
-      "source": "PU3",
-      "destination": "DO11"
-    },
-    {
-      "id": 62,
-      "source": "PU4",
-      "destination": "DO1"
-    },
-    {
-      "id": 63,
-      "source": "PU11",
-      "destination": "DO13"
-    },
-    {
-      "id": 64,
-      "source": "PU2",
-      "destination": "DO9"
-    },
-    {
-      "id": 65,
-      "source": "PU5",
-      "destination": "DO13"
-    },
-    {
-      "id": 66,
-      "source": "PU2",
-      "destination": "DO9"
-    },
-    {
-      "id": 67,
-      "source": "PU5",
-      "destination": "DO15"
-    },
-    {
-      "id": 68,
-      "source": "PU4",
-      "destination": "DO4"
-    },
-    {
-      "id": 69,
-      "source": "PU3",
-      "destination": "DO3"
-    },
-    {
-      "id": 70,
-      "source": "PU5",
-      "destination": "DO12"
-    },
-    {
-      "id": 71,
-      "source": "PU8",
-      "destination": "DO1"
-    },
-    {
-      "id": 72,
-      "source": "PU15",
-      "destination": "DO11"
-    },
-    {
-      "id": 73,
-      "source": "PU7",
-      "destination": "DO13"
-    },
-    {
-      "id": 74,
-      "source": "PU4",
-      "destination": "DO13"
-    },
-    {
-      "id": 75,
-      "source": "PU13",
-      "destination": "DO3"
-    },
-    {
-      "id": 76,
-      "source": "PU14",
-      "destination": "DO13"
-    },
-    {
-      "id": 77,
-      "source": "PU15",
-      "destination": "DO5"
-    },
-    {
-      "id": 78,
-      "source": "PU14",
-      "destination": "DO7"
-    },
-    {
-      "id": 79,
-      "source": "PU15",
-      "destination": "DO2"
-    },
-    {
-      "id": 80,
-      "source": "PU3",
-      "destination": "DO14"
-    },
-    {
-      "id": 81,
-      "source": "PU11",
-      "destination": "DO12"
-    },
-    {
-      "id": 82,
-      "source": "PU14",
-      "destination": "DO3"
-    },
-    {
-      "id": 83,
-      "source": "PU12",
-      "destination": "DO4"
-    },
-    {
-      "id": 84,
-      "source": "PU15",
-      "destination": "DO6"
-    },
-    {
-      "id": 85,
-      "source": "PU10",
-      "destination": "DO13"
-    },
-    {
-      "id": 86,
-      "source": "PU2",
-      "destination": "DO11"
-    },
-    {
-      "id": 87,
-      "source": "PU2",
-      "destination": "DO11"
-    },
-    {
-      "id": 88,
-      "source": "PU10",
-      "destination": "DO6"
-    },
-    {
-      "id": 89,
-      "source": "PU7",
-      "destination": "DO6"
-    },
-    {
-      "id": 90,
-      "source": "PU10",
-      "destination": "DO4"
-    },
-    {
-      "id": 91,
-      "source": "PU0",
-      "destination": "DO13"
-    },
-    {
-      "id": 92,
-      "source": "PU9",
-      "destination": "DO0"
-    },
-    {
-      "id": 93,
-      "source": "PU7",
-      "destination": "DO6"
-    },
-    {
-      "id": 94,
-      "source": "PU6",
-      "destination": "DO9"
-    },
-    {
-      "id": 95,
-      "source": "PU12",
-      "destination": "DO9"
-    },
-    {
-      "id": 96,
-      "source": "PU3",
-      "destination": "DO9"
-    },
-    {
-      "id": 97,
-      "source": "PU8",
-      "destination": "DO1"
-    },
-    {
-      "id": 98,
-      "source": "PU13",
-      "destination": "DO5"
-    },
-    {
-      "id": 99,
-      "source": "PU14",
-      "destination": "DO15"
-    },
-    {
-      "id": 100,
-      "source": "PU5",
-      "destination": "DO8"
+      "pickup": "PU1",
+      "dropoff": "DO0"
     }
   ]
 }
