--- a/backend/layer1/assets/poi_config.json
+++ b/backend/layer1/assets/poi_config.json
@@ -24,6 +24,20 @@
             "active": true
         },
         {
+            "id": "C1",
+            "type": "CHARGING",
+            "x": 20,
+            "y": 150,
+            "active": true
+        },
+        {
+            "id": "C2",
+            "type": "CHARGING",
+            "x": 270,
+            "y": 20,
+            "active": true
+        },
+        {
             "id": "PU0",
             "type": "PICKUP",
             "x": 60,
